Modify some styles and classes and update tests

--- a/src/components/heroes/heroCard.css
+++ b/src/components/heroes/heroCard.css
@@ -20,6 +20,12 @@
   grid-area: frontAndBack;
 }
 
+.front img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .back {
   grid-area: frontAndBack;
   transform: rotateY(-180deg);
